--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.3.0",
+    "react-typed": "^2.0.12",
     "scrollreveal": "^4.0.5",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
