edit metadata and config

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Chris Thien <chrisanhthiennguyen@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/chrisanhthien/portfolioV2"
   },
   "keywords": [
     "gatsby"
